--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/tetsu/.conda/envs/detectron/bin/python"
+    "python.pythonPath": "/home/tetsu/anaconda3/envs/VideoPose3D/bin/python"
 }
